tools/tests/errors/tensor_reciprocal_zero.ki
discard import("tensor").Tensor([0.0]).reciprocal()
